# fastapi_template

./: .gitignore  Dockerfile  LICENSE  README.md  lint.sh  make_tag.sh
docker/: docker-compose.yml
src/: alembic.ini  configs.py  manage.py  pyproject.toml
src/apps/: base.py
src/apps/example/: __init__.py  api.py  exceptions.py  schemas.py  services.py
src/apps/user/: api.py  exceptions.py  schemas.py
src/extensions/: base_configs.py
src/extensions/aioredis/: __init__.py
src/extensions/asyncio/: __init__.py
src/extensions/celery/: __init__.py
src/extensions/fastapi/: __init__.py  api.py  context.py  exceptions.py  middleware.py
src/extensions/jwt/: __init__.py  exceptions.py
src/extensions/sqlalchemy/: __init__.py
src/extensions/sqlalchemy_utils/: __init__.py
src/extensions/sqlmodel/: __init__.py
src/extensions/threadpool/: __init__.py
src/models/: __init__.py
src/models/migrations/: env.py
src/unittests/: conftest.py  test_example.py  utils.py
src/utils/: config.py  object.py
